chore: Update hero section height and add overflow to fix layout issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  overflow: hidden;
-}
-
 /* variables */
 :root {
   --rgb-blue-400: 0, 122, 255;
